# wisp

./: .gitignore  README.md  context.md  mcp_add_now_todo.md  patch.py  prd.md  start.sh  stop.sh
docs/: pitch.md  use-cases.md
router/: .dockerignore  .env.example  Dockerfile  preinstall_npm.txt  preinstall_pypi.txt  pyproject.toml  server.py  test_call.py
router/server/: .tokens  NANGO_SETUP.md  add_add_now_servers.py  add_curated_servers.py  add_github_mcp.py  context.txt  db.py  debug_mcp.py  drop_vec_table.py  enrich.py  extract.py  extract_tools.py  gorev.db  mcp.db  mcp_add_now_status.md  mcp_client.py  mcp_registry.db-shm  nango_auth.py  oauth_setup.py  oauth_tokens.py  relevance.py  retriever.py  stderr.txt  stdout.txt  test_model.py  test_perigon.py  visualize.py
router/server/.statecli/: state.db
router/server/mcp-all/: index-summary.json  mcp-search-index.json
scripts/: backfill_embeddings.mjs  export_registry.py  import_to_convex.mjs
scripts/data/: environment_variables.json  server_packages.json  server_remotes.json  servers.json  tool_embeddings.json
server/: main.py  pyproject.toml
src/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
src/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
src/app/: globals.css  layout.tsx  page.tsx
src/components/: auth.tsx  workflow-ui.tsx
src/convex/: apps.ts  chat.ts  (+13 more)
(+553 files in other folders)
